use java 7 processbuild instead to elimitate memory restriction on file descriptor size